[gd_scene load_steps=9 format=2]

[ext_resource path="res://GFX/Enemies/pipi.png" type="Texture" id=1]
[ext_resource path="res://enemies/Pipi.gd" type="Script" id=2]
[ext_resource path="res://enemies/Navigation.gd" type="Script" id=3]
[ext_resource path="res://enemies/PlayerDetection.gd" type="Script" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 3.05332
height = 7.55165

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=4]
radius = 8.19749

[node name="Pipi" type="KinematicBody2D"]
position = Vector2( 210.905, 126.142 )
collision_layer = 2
collision_mask = 20
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.074295, 1.85809 )
rotation = 1.57079
shape = SubResource( 1 )

[node name="animations" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )

[node name="PatrolTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="ConfusionTimer" type="Timer" parent="."]
one_shot = true

[node name="NumbTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Navigation" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 5
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Navigation"]
shape = SubResource( 4 )

[node name="RayRight" type="RayCast2D" parent="Navigation"]
rotation = -1.57079
enabled = true
cast_to = Vector2( 0, 10 )
collision_mask = 4

[node name="RayLeft" type="RayCast2D" parent="Navigation"]
rotation = 1.57079
enabled = true
cast_to = Vector2( 0, 10 )
collision_mask = 4

[node name="RayUp" type="RayCast2D" parent="Navigation"]
rotation = -3.14159
enabled = true
cast_to = Vector2( 0, 10 )
collision_mask = 4

[node name="RayDown" type="RayCast2D" parent="Navigation"]
enabled = true
cast_to = Vector2( 0, 10 )
collision_mask = 4

[node name="PlayerDetection" type="Area2D" parent="."]
collision_layer = 64
script = ExtResource( 4 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="PlayerDetection"]
rotation = -1.57079
polygon = PoolVector2Array( -24, 0, -64, 84, 64, 84, 24, 0, 0, -32 )

[connection signal="timeout" from="PatrolTimer" to="." method="_on_PatrolTimer_timeout"]
[connection signal="timeout" from="ConfusionTimer" to="." method="_on_ConfusionTimer_timeout"]
[connection signal="timeout" from="NumbTimer" to="." method="_on_NumbTimer_timeout"]
[connection signal="body_entered" from="Navigation" to="." method="_on_Navigation_body_entered"]
[connection signal="body_entered" from="Navigation" to="Navigation" method="_on_Navigation_body_entered"]
[connection signal="body_entered" from="PlayerDetection" to="PlayerDetection" method="_on_PlayerDetection_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="PlayerDetection" method="_on_PlayerDetection_body_exited"]
[connection signal="player_detected" from="PlayerDetection" to="." method="_on_PlayerDetection_player_detected"]
[connection signal="player_lost" from="PlayerDetection" to="." method="_on_PlayerDetection_player_lost"]
